Save current status

--- a/jodel.html
+++ b/jodel.html
@@ -38,7 +38,7 @@
         src: url("./fonts/Gotham-BoldItalic.otf") format("opentype");
     }
 
-    h6, .fa-comments {
+    h6, small, .fa-comments {
         color: rgba(255, 255, 255, 0.6);
     }
 
@@ -86,7 +86,8 @@
                         <div class="row">
                             <div class="col-12">
                                 <p></p>
-                                <i class="far fa-comments"></i>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
                             </div>
                         </div>
                     </div>
@@ -98,48 +99,126 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
-        <!-- <i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min -->
+        <!-- Card 2 -->
         <div class="card text-white bg-warning">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Gestern vom Döner geträumt, heute einen geholt. Träume nicht dein Leben, sondern
-                    lebe deinen Traum! <strong>#Dönerliebe</strong></p>
-                <i class="far fa-comments"></i>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Gestern vom Döner geträumt, heute einen geholt. Träume nicht dein
+                                    Leben, sondern
+                                    lebe deinen Traum<br><br><b>Dönerliebe</b></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- Card 3 -->
         <div class="card text-white bg-primary">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Heute kam ein Strauß Rosen von meinem Freund aus Kanada. Jetzt ist meine Mutter
-                    sauer auf mein Paps, weil sie nicht mal eine Blume bekommt und mein Paps sauer auf mein Freund...
-                <p class="w-100"></p><b>#ichfreumich #bisschenamüsant #3st</b></p>
-                <i class="far fa-comments"></i>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Heute kam ein Strauß Rosen von meinem Freund aus Kanada. Jetzt ist
+                                    meine Mutter sauer auf mein Paps, weil sie nicht mal eine Blume bekommt und mein
+                                    Paps sauer auf mein Freund...
+                                    <br>
+                                    <b>
+                                        <br>
+                                        #ichfreumich<br>
+                                        #bisschenamüsant<br>
+                                        #3st</b></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
         <!-- Card 4 -->
         <div class="card text-white bg-primary">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Ich schau gerade die olympischen Winterspiele und frage mich gerade, wie man drauf
-                    kommt sich auf nen mini Schlitten zu legen und Kopfüber mit 140 km/h ne Eisbahn runterzubrettern
-                    😀❄️❄️❄️</p>
-                <i class="far fa-comments"></i>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Ich schau gerade die olympischen Winterspiele und frage mich gerade, wie man drauf kommt sich auf nen mini Schlitten zu legen und Kopfüber mit 140 km/h ne Eisbahn runterzubrettern 😀❄️❄️❄️</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
         <!-- Card 5 -->
         <div class="card text-white">
             <div style="overflow: hidden;">
                 <img class="card-img"
-                     src="http://dgue1f1nm4nsd.cloudfront.net/5a881d854fd2840016f8c8a0_8cN8yrlz0sydI44X_thumb.jpeg"
+                     src="http://dgue1f1nm4nsd.cloudfront.net/5a8800f229e9790010545a48_rW8tS81guPXFRM4J_thumb.jpeg"
                      width="286" height="180" alt="Card image">
             </div>
             <div class="card-img-overlay">
@@ -151,30 +230,107 @@
         <!-- Card 6 -->
         <div class="card text-white bg-danger">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Wenns Display defekt ist muss halt die Maus her😂</p>
-                <i class="far fa-comments"></i>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Wenns Display defekt ist muss halt die Maus her😂️</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
         <!-- Card 7 -->
         <div class="card text-white bg-primary">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Woran ich gestern Nacht gemerkt habe, dass ich in München bin? An der Garderobe im
-                    Club hingen mehr Echtpelz als Kunstfellkrägen 🙈 <b>#justusse</b></p>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Woran ich gestern Nacht gemerkt habe, dass ich in München bin?<br><br>An der
+                                    Garderobe im Club hingen mehr Echtpelz als Kunstfellkrägen 🙈<br><br><b>#justusse</b>️</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
         <!-- Card 8 -->
         <div class="card text-white bg-warning">
             <div class="card-body">
-                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main Feed</strong> • 1min</h6>
-                <p class="card-text">Top jodel on Nordkorea ist gerade ich zitiere "Ein sehr nices Land vong Freedom
-                    her" 😂 <b>#Pyongyang</b></p>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <strong>Main
+                                    Feed</strong> • 1min</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">Top jodel on Nordkorea ist gerade ich zitiere "Ein sehr nices Land vong Freedom
+                                    her" 😂<br><br><b>#Pyongyang</b>️</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>3</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            3
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 
 </div>
